@@ -1,6 +1,7 @@
 1//12/23:
 -Scene graph entity node drag multi-selection with middle mouse
 -Fixed undo/redo not accounting for child entities
+-Fixed RemoveInstance not dequeueing duplicate instances flagged for update
 
 10/2/23:
 -Mesh transform buffer bug where transforms would get skipped fixed
